web/src/components/SearchBar/SearchBar.css
form {
  display: flex;
  align-items: center;
  padding: 8px 12px;
  margin: 20px auto;
  max-width: 400px;

  background: transparent;
  border-radius: 25px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
  border: 1px solid rgba(249, 246, 241, 0.5);
  transition: border-color 0.25s;
}

.search-input {
  border: none;
  outline: none;
  font-size: 1rem;
  padding: 8px;
  background-color: transparent;
  width: 100%;
}

.search-input::placeholder {
  color: rgba(249, 246, 241, 0.7);
}

form:hover {
  border-color: #e8e8e8;
}

.search-btn {
  background-color: transparent;
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: inherit;
  cursor: pointer;
}

.search-icon {
  width: 15px;
  height: 15px;
}

